# yubi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  renovate.json  spec.yml.sample
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: renovate.yml  rust.yml  test.yml
script/: coverage.sh
src/: client.rs  lib.rs  main.rs  operator.rs  report.rs  spec.rs
src/client/: cloud_sql_client.rs  gke_client.rs
src/operator/: cloud_sql_instance_status_operator.rs  gke_cluster_status.rs  gke_cluster_status_operator.rs  gke_node_pool_status_operator.rs
src/report/: detail.rs  record.rs  summary.rs
src/spec/: cluster_status.rs  node_pool_status.rs  result.rs  spec_response.rs  sql_instance_status.rs
src/templates/: detail.hbs  summary.hbs
