[package]
name = "yubi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1.53"
clap = { version = "3.1.15", features = ["derive"] }
env_logger = "0.9.0"
googapis = { version = "0.6.0", features = ["google-container-v1"] }
gouth = { version = "0.2.1" }
log = "0.4.17"
prost = "0.10.3"
prost-types = "0.10.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "time", "fs", "macros"] }
tonic = { version = "0.6.2", features = ["tls"] }

[dev-dependencies]
mockall = "0.11.0"
rstest = "0.12.0"
