[package]
name = "yubi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.56"
clap = { version = "3.2.12", features = ["derive"] }
env_logger = "0.9.0"
googapis = { version = "0.6.0", features = ["google-container-v1"] }
gouth = { version = "0.2.1" }
log = "0.4.17"
prost = "0.10.4"
prost-types = "0.10.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_yaml = "0.8.26"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "time", "fs", "macros"] }
tonic = { version = "0.6.2", features = ["tls"] }

[dev-dependencies]
mockall = "0.11.1"
rstest = "0.15.0"
