[package]
name = "yubi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.57"
clap = { version = "3.2.18", features = ["derive"] }
env_logger = "0.9.0"
googapis = { version = "0.6.0", features = ["google-container-v1"] }
gouth = { version = "0.2.1" }
log = "0.4.17"
prost = "0.11.0"
prost-types = "0.11.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "time", "fs", "macros"] }
tonic = { version = "0.6.2", features = ["tls"] }

[dev-dependencies]
mockall = "0.11.3"
rstest = "0.15.0"
